--- a/BahnClient/Properties/launchSettings.json
+++ b/BahnClient/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7265;http://localhost:5143",
+      "applicationUrl": "https://localhost:7265;http://localhost:5143;http://*:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
